# langchain-workspace

ch01/: example.txt  main.py  pyproject.toml
ch01/sec01/: 01_type.py  02_if.py  03_for.py  05_func.py  06_file.py  07_with.py  08_try.py  09_comp.py  10_f.py  11_class.py  12_module.py  13_deco.py  14_sync.py  15_async.py  16_pydantic.py  17_generator.py  18_generator.py
ch02/: .env  pyproject.toml
ch02/sec01/: llm_api.py
ch02/sec02/: 01_persona.py  02_zero_shot.py  03_one_shot.py  04_few_shot.py
ch02/sec03/: 01_single_turn.py  02_multi_turn.py
ch02/sec04/img_to_txt/: 01_docent.ipynb  02_calculate_calories.py
ch02/sec04/img_to_txt/data/pdf_to_txt/: 01_pdf_to_txt_pypdf.py
ch03/: pyproject.toml
ch03/sec01/: 01_langchain_gemini.ipynb  02_temperature_stream.ipynb  03_prompt_template.ipynb  04_lcel.ipynb  05_output_parser.ipynb
ch03/sec02/: 01_models.ipynb  02_messages.ipynb
ch03/sec03/: 02_streamlit_lcel.py
